configuracoes de deployment